# zeitcontrol

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md  build.sh  jthread.h  main.cpp  serialport.cpp  serialport.h  string_format.h  zeitcontrol.cpp  zeitcontrol.h
include/zeitcontrol/: zeitcontrol.h
src/: serialport.cpp  serialport.h  string_format.h  zeitcontrol.cpp
test/: main.cpp
